--- a/Source/WpfHosting.Sample/App.xaml
+++ b/Source/WpfHosting.Sample/App.xaml
@@ -1,5 +1,5 @@
-<Application x:Class="WpfHosting.Sample.App"
+﻿<Application x:Class="WpfHosting.Sample.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             DispatcherUnhandledException="OnDispatcherUnhandledException">
-</Application>
+             x:ClassModifier="internal"
+             DispatcherUnhandledException="OnDispatcherUnhandledException" />
