--- a/Source/WpfHosting.Sample/Views/MainWindow.xaml
+++ b/Source/WpfHosting.Sample/Views/MainWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="WpfHosting.Sample.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:vm="clr-namespace:WpfHosting.Sample.ViewModels"
+        Title="{Binding Title}"
+        Width="800"
+        Height="450"
+        x:ClassModifier="internal"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance vm:MainWindowViewModel}"
-        Title="{Binding Title}" Height="450" Width="800">
-</Window>
+        d:DataContext="{d:DesignInstance vm:MainWindowViewModel}" />
